fix: chaning scrollbar thumb color

--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,6 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: #33cccc;
+  background-color: #919191;
   border-radius: 20px;
 }
